@@ -158,7 +158,8 @@ function advanced_forum_theme_registry_alter(&$theme_registry) {
     $theme_registry['comment_wrapper']['function'] = 'advanced_forum_comment_wrapper';
   }
 
-  // Kill the next/previous forum topic navigation links.
+  // Optionally kill the next/previous forum topic navigation links because
+  // it is a nasty query that can slow down the forums.
   if (!variable_get('advanced_forum_use_topic_navigation', FALSE)) {
     foreach ($theme_registry['forum_topic_navigation']['preprocess functions'] as $key => $value) {
       if ($value == 'template_preprocess_forum_topic_navigation') {
@@ -191,7 +192,7 @@ function advanced_forum_theme_registry_alter(&$theme_registry) {
                      'forum_topic_list',
                      'forum_icon',
                      'forum_submitted',
-                     'forum-topic-navigation',
+                     'forum_topic_navigation',
                      'author_pane',
                      'advanced_forum_statistics',
                      'advanced_forum_search_forum',
@@ -260,7 +261,7 @@ function advanced_forum_nodeapi(&$node, $op, $a3 = NULL, $a4 = NULL) {
     advanced_forum_statistics_replies(TRUE);
   }
 
-  if ($op == 'view' && !$node->teaser) {
+  if ($op == 'view' && !empty($node->content['forum_navigation'])) {
     if (!empty($node->content['forum_navigation'])) {
       // Move the forum navigation to a seperate variable so it doesn't
       // get lumped in with the content.
