@@ -2,7 +2,7 @@
 // $Id$
 
 /**
- * @file forum-topic-navigation.tpl.php
+ * @file advanced_forum.naked.topic-navigation.tpl.php
  * Default theme implementation to display the topic navigation string at the
  * bottom of all forum topics.
  *
@@ -23,14 +23,13 @@
  * @see theme_forum_topic_navigation()
  */
 ?>
-
 <?php if ($prev || $next): ?>
   <div class="forum-topic-navigation clear-block">
     <?php if ($prev): ?>
-      <a href="<?php print $prev_url; ?>" class="topic-previous" title="<?php print t('Go to previous forum topic') ?>">‹ <?php print $prev_title ?></a>
+      <a href="<?php print $prev_url; ?>" class="topic-previous" title="<?php print t('Go to previous forum topic') ?>">‹ <?php print t('Previous topic: @title', array('@title' => $prev_title)) ?></a>
     <?php endif; ?>
     <?php if ($next): ?>
-      <a href="<?php print $next_url; ?>" class="topic-next" title="<?php print t('Go to next forum topic') ?>"><?php print $next_title ?> ›</a>
+      <a href="<?php print $next_url; ?>" class="topic-next" title="<?php print t('Go to next forum topic') ?>"><?php print t('Next topic: @title', array('@title' => $next_title)) ?> ›</a>
     <?php endif; ?>
   </div>
 <?php endif; ?>
