@@ -9,6 +9,7 @@ July 13, 2009
 NOISSUE by Michelle: Various notice fixes.
 #497450 by Michelle: More work on Author Pane image conversion.
 #512222 by Michelle: Fixed typo preventing 'submitted' template from being found.
+#515966 by Michelle: Moved topic navigation out of node content and down to bottom of topic.
 
 July 8, 2009
 ------------
